# exercises

./: go_examples.md  links.md  phy.md
rust/1-forget-drop/: drop.rs
rust/10-obj-freezing/: obj_freezing_1.rs  obj_freezing_2.rs
rust/11-ownership/: ownership_1.rs  ownership_2.rs
rust/12-range-patterns/: 12_range_patterns.rs
rust/13-while-some-iter/: while_some_iter_1.rs
rust/14-slices/: slice_1.rs  slice_2.rs  slice_3.rs  slice_4.rs  slice_5.rs
rust/15-trait/: trait_1.rs  trait_2.rs
rust/16-impl-trait-builtin/: trait_1.rs
rust/17-monomorphization/: monomorphization_1.rs
rust/18-trait-inheritance/: trait_inheritance_1.rs
rust/19-panic/: panic_1.rs  panic_2.rs  panic_3.rs
rust/2-value-does-not-live-long-enough/: live.rs
rust/20-result/: result_2.rs  result_3.rs  result_4.rs  result_5.rs
rust/20-result/results_1/result_1/: Cargo.toml
rust/20-result/results_1/result_1/src/: main.rs
rust/21-option/: option_1.rs
rust/22-borrowing/: borrowing_1.rs  borrowing_2.rs  borrowing_3.rs  borrowing_4.rs
rust/23-generics/: generics_1.rs
rust/3-call-drop/: call_drop.rs
rust/4-mut-ref/: mut-ref.rs  mut_ref_2.rs  mut_ref_3.rs  mut_ref_4.rs
rust/5-init-with-block/: init_with_block.rs
rust/6-loop-init/: loop_init.rs
rust/7-let-some/: let_some.rs
rust/8-life-time/: life_time_1.rs  life_time_2.rs  life_time_3.rs  life_time_4.rs  life_time_5.rs  life_time_6.rs
rust/9-for-range-step-by/: for_range_step_by.rs
