[package]
name = "result_1"
version = "0.1.0"
authors = ["Damir Bedretdinov <damir.bedretdinov@onlinesup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.78"
